bug fixing the position of the fries image on the intro page, and ensuring the background image covers the entire right column without repeating.

--- a/Facefood/CSS/introstyle.css
+++ b/Facefood/CSS/introstyle.css
@@ -61,11 +61,9 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-.bg-image-right-column {
-  width: 100%;
-  height: 240px;
-  object-fit: cover;
+  background-size: cover;
+  background-position: center;     
+  background-repeat: no-repeat;  
 }
 
 .cow {
@@ -86,10 +84,9 @@ body {
 }
 .fries {
   position: absolute;
-  bottom: 73%;
-  left: 75%;
-  transform: translateX(-50%);
-  width: 170px;
+  bottom: 67%;
+  left: 64%;
+  width: 253px;
   z-index: 1;
 }
 .ufo {
@@ -126,8 +123,8 @@ form {
 
 .enter-btn {
   font-size: 30px;
-  position: absolute;
-  left: 65%;
+  position: relative;
+  left: 40%;
 
 }
 
